package iktaniyalol.ru.technicalassistant;

import android.app.Activity;
import android.os.Bundle;

public class Phys extends MainActivity {
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_phys);
    }
}
