package iktaniyalol.ru.technicalassistant;

import android.os.Bundle;

public class TheorGem extends MainActivity {
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_theorgem);
    }
}
